compiler/src/test/resources/golden/errors/type_unknown_fn.dawn
fn f() -> Int = compute(3)
