compiler/src/test/resources/golden/errors/type_unknown_fn.err
error: undefined function: compute
  --> type_unknown_fn.dawn:1:17
  |
1 | fn f() -> Int = compute(3)
  |                 ^^^^^^^
